Upgrade to webtrees 2.1.1 - Adapt MyArtJaub modules Allow vertical overflow of main container Fix icon sizes in chartbox

--- a/src/sass/rural/_main.scss
+++ b/src/sass/rural/_main.scss
@@ -41,6 +41,7 @@ main {
         @include maj-base-layout-col;
 		
         background-color: $white;
+        overflow-x: visible;
 
         /* Space between the header/footer and the main content. */
         padding-bottom: 1rem;
