--- a/src/sass/rural/_pages-charts.scss
+++ b/src/sass/rural/_pages-charts.scss
@@ -57,7 +57,7 @@
         max-height: 7.5rem;
     }
 
-    .svg-inline--fa,
+    .wt-icon-zoom-in .svg-inline--fa,
     .icon-pedigree {
         height: 16px;
     }
